apps/media-server/streamystats/webpage.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamystats-nextjs
  namespace: media-server
  labels:
    app: streamystats-nextjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamystats-nextjs
  template:
    metadata:
      labels:
        app: streamystats-nextjs
    spec:
      containers:
        - name: nextjs
          image: ghcr.io/fredrikburmester/streamystats-nextjs:v2.20.0
          ports:
            - containerPort: 3000
              name: http
