apps/media-server/streamystats/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamystats
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: streamystats
      port:
        number: 3000
  tls:
    - hosts:
        - streamystats
